<resources>
    <string name="app_name">开心打地鼠</string>
    <string name="start_game">Start Game</string>
    <string name="about">About</string>
    <string name="highscores">Highscores</string>
    <string name="more_apps">More Games</string>
    <string name="exit_game">Exit Game</string>
    <string name="whackamole_about">Whac-A-Mole is an arcade redemption game. A typical Whac-A-Mole machine consists of a large, waist-level cabinet with some holes in its top and a large, soft, black mallet. Each hole contains a single plastic mole and the machinery necessary to move it up and down. Once the game starts, the moles will begin to pop up from their holes at random. The object of the game is to force the individual moles back into their holes by hitting them directly.</string>
    <string name="game_over">Game Over</string>
    <string name="game_paused">Game Paused</string>
    <string name="tap_to_start_a_new_game">Tap to start a new game</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="vs_mode">Vs Mode</string>
    <string name="draw">Draw</string>
    <string name="p1_win">P1 Win</string>
    <string name="p2_win">P2 Win</string>
    <string name="wy_title_dashboard">Game Dashboard</string>
    <string name="wy_title_leaderboards">Leaderboards</string>
    <string name="wy_title_achievements">Achievements</string>
    <string name="wy_title_challenges">Challenges</string>
    <string name="wy_title_discussion">Discussion</string>
    <string name="wy_title_who_is_playing">Who is Playing</string>
    <string name="wy_title_user_dashboard">User Dashboard</string>
    <string name="wy_title_my_friends">My Friends</string>
    <string name="wy_title_x_friends">"%s's Friends"</string>
    <string name="wy_title_my_games">My Games</string>
    <string name="wy_title_x_games">"%s's Games"</string>
    <string name="wy_title_challenge_info">Challenge Info</string>
    <string name="wy_title_post_topic">Post New Topic</string>
    <string name="wy_title_post_reply">Post New Reply</string>
    <string name="wy_title_share_game">Share Game</string>
    <string name="wy_title_message_history">Message History</string>
    <string name="wy_title_message_threads">Inbox</string>
    <string name="wy_title_system_notice">System Notice</string>
    <string name="wy_title_edit_profile">Edit Profile</string>
    <string name="wy_title_search_user">Search User</string>
    <string name="wy_title_how_to_find_friends">How to Find Friends</string>
    <string name="wy_title_send_challenge">Send Challenge</string>
    <string name="wy_title_honor_roll">Honor Roll</string>
    <string name="wy_title_my_neighbors">My Neighbors</string>
    <string name="wy_title_fan_club">Fav./Share</string>
    <string name="wy_item_leaderboard">Leaderboard</string>
    <string name="wy_item_achievement">Achievement</string>
    <string name="wy_item_challenge">Challenge</string>
    <string name="wy_item_discussion">Discussion</string>
    <string name="wy_item_who_is_playing">Who is Playing</string>
    <string name="wy_item_fan_club">Fav./Share</string>
    <string name="wy_item_my_friends">My friends</string>
    <string name="wy_item_my_neighbors">My neighbors</string>
    <string name="wy_item_my_games">My games</string>
    <string name="wy_item_my_message">My messages</string>
    <string name="wy_item_system_notice">System notice</string>
    <string name="wy_item_edit_profile">Edit profile</string>
    <string name="wy_item_help">Help</string>
    <string name="wy_item_featured_games">Featured Games</string>
    <string name="wy_item_my_friends_games">"Friend's Games"</string>
    <string name="wy_item_most_popular">Most Popular</string>
    <string name="wy_item_recently_added">Recently Added</string>
    <string name="wy_item_developer_apps">"Developer's Apps"</string>
    <string name="wy_item_wiyun_five">WiYun Five</string>
    <string name="wy_item_import_friends">Search user</string>
    <string name="wy_item_edit_account_retrieval">Edit account retrieval</string>
    <string name="wy_item_change_name">Change my WiYun name</string>
    <string name="wy_item_change_avatar">Change my portrait</string>
    <string name="wy_item_switch_account">Switch to other account</string>
    <string name="wy_item_create_new_account">Create new account</string>
    <string name="wy_item_unbind_account">Remove account from device</string>
    <string name="wy_item_privacy_and_other_settings">Privacy and other settings</string>
    <string name="wy_item_friends">Friends</string>
    <string name="wy_item_games">Games Played</string>
    <string name="wy_item_locate">Locate User</string>
    <string name="wy_item_last_known_location">Last Known Location</string>
    <string name="wy_item_take_from_camera">Take from camera</string>
    <string name="wy_item_choose_a_picture">Choose a picture</string>
    <string name="wy_item_use_default_icon">Use WiYun default</string>
    <string name="wy_item_add_app_to_favorite">Add \"%s\" to favorite</string>
    <string name="wy_item_remove_app_from_favorite">Remove \"%s\" from favorite</string>
    <string name="wy_item_share_app">Share app to my friends</string>
    <string name="wy_score_global">Global</string>
    <string name="wy_score_friends">Friends</string>
    <string name="wy_score_near_me">Near Me</string>
    <string name="wy_time_day">Day</string>
    <string name="wy_time_week">Week</string>
    <string name="wy_time_month">Month</string>
    <string name="wy_time_all">All</string>
    <string name="wy_friends_friends">Friends</string>
    <string name="wy_friends_pending">Pending</string>
    <string name="wy_send_challenge_friends">Friends</string>
    <string name="wy_send_challenge_neighbors">Neighbor</string>
    <string name="wy_send_challenge_by_score">By Score</string>
    <string name="wy_apps_all_games">All Games</string>
    <string name="wy_apps_invitation">Invitations</string>
    <string name="wy_challenge_pending">Pending</string>
    <string name="wy_challenge_history">History</string>
    <string name="wy_challenge_history_sent">Sent by Me</string>
    <string name="wy_challenge_history_received">I Received</string>
    <string name="wy_who_is_playing_friends">Friends</string>
    <string name="wy_who_is_playing_others">Others</string>
    <string name="wy_date_format_MMddHHmm" formatted="false">%d-%d %02d:%02d</string>
    <string name="wy_date_format_MMdd" formatted="false">%d-%d</string>
    <string name="wy_date_format_yyyyMMddHHmm" formatted="false">%d-%d-%d %02d:%02d</string>
    <string name="wy_date_format_yyyyMMdd" formatted="false">%d-%d-%d</string>
    <string name="wy_feature_million_users">Millions of Users</string>
    <string name="wy_feature_leaderboard">Leaderboard</string>
    <string name="wy_feature_achievement">Achievement</string>
    <string name="wy_feature_challenge">Challenge</string>
    <string name="wy_feature_games">Thousands of Games</string>
    <string name="wy_feature_message">Message</string>
    <string name="wy_topic_idea">Idea</string>
    <string name="wy_topic_problem">prob.</string>
    <string name="wy_topic_question">qu.</string>
    <string name="wy_topic_praise">Praise</string>
    <string name="wy_button_ok">OK</string>
    <string name="wy_button_cancel">Cancel</string>
    <string name="wy_button_clear">Clear</string>
    <string name="wy_button_no_thanks">"I don't want those amazing features"</string>
    <string name="wy_button_enable_wiyun_cloud">Enable WiYun</string>
    <string name="wy_button_login_with_this_name">Login with this name</string>
    <string name="wy_button_login_with_this_account">Login with this account</string>
    <string name="wy_button_switch_account">use another account</string>
    <string name="wy_button_submit">Submit</string>
    <string name="wy_button_create_new_account">Create new account</string>
    <string name="wy_button_continue">Continue</string>
    <string name="wy_button_invite_gmail_contacts">Invite your Gmail contacts</string>
    <string name="wy_button_share_location">Share your location</string>
    <string name="wy_button_share_status">Share your online status</string>
    <string name="wy_button_add_friend">Add Friend</string>
    <string name="wy_button_remove_friend">Remove Friend</string>
    <string name="wy_button_report_user">Report User</string>
    <string name="wy_button_message">Send Message</string>
    <string name="wy_button_play_challenge">Play Challenge</string>
    <string name="wy_button_post">Post</string>
    <string name="wy_button_send">Send</string>
    <string name="wy_button_search">Search friends in WiYun</string>
    <string name="wy_button_bet">Bet your honor (Current: %d)</string>
    <string name="wy_button_locate">Locate</string>
    <string name="wy_button_reject">Reject</string>
    <string name="wy_button_prev">&lt;</string>
    <string name="wy_button_next">></string>
    <string name="wy_button_post_topic">Post Topic</string>
    <string name="wy_button_view_app">View App Info</string>
    <string name="wy_button_cancel_challenge">Cancel Pending Challenges</string>
    <string name="wy_option_item_clear">Clear</string>
    <string name="wy_option_item_clear_all">Clear All</string>
    <string name="wy_option_item_search_user">Search User</string>
    <string name="wy_option_item_my_friends">My Friends</string>
    <string name="wy_option_item_exit">Back to Game</string>
    <string name="wy_context_item_view_user">View User</string>
    <string name="wy_context_item_reply_floor_host">Reply Floor Host</string>
    <string name="wy_context_item_reply_x_floor">Reply Floor %d</string>
    <string name="wy_context_item_focus_topic">Focus on topic</string>
    <string name="wy_context_item_remove_focus">Remove focus</string>
    <string name="wy_context_item_add_to_favorite">Add to my favorite</string>
    <string name="wy_context_item_remove_from_favorite">Remove from my favorite</string>
    <string name="wy_context_item_clear">Clear</string>
    <string name="wy_context_item_clear_all">Clear All</string>
    <string name="wy_context_item_accept">Accept</string>
    <string name="wy_context_item_accept_all">Accept All</string>
    <string name="wy_context_item_decline">Decline</string>
    <string name="wy_context_item_decline_all">Decline All</string>
    <string name="wy_context_item_enter_app_dashboard">Enter App Dashboard</string>
    <string name="wy_context_item_share_app">Share with Friends</string>
    <string name="wy_context_item_view_app">View App</string>
    <string name="wy_label_loading">Loading...</string>
    <string name="wy_label_online">Online</string>
    <string name="wy_label_join_wiyun_cloud">Join WiYun to interact with millions of users and enjoy thousands of games</string>
    <string name="wy_label_get_most_out">Get the most out of WiYun</string>
    <string name="wy_label_welcome_back">Welcome back</string>
    <string name="wy_label_find_account_for_this_device">Has account associated with this device</string>
    <string name="wy_label_switch_account">Switch account</string>
    <string name="wy_label_unbind_account">Remove account</string>
    <string name="wy_label_about_unbind_account">Note: current account will be removed from this device. If you want to use this account again, you can enter bound info (like email, mobile and password) to retrieve this account.</string>
    <string name="wy_label_invite_friends">Invite friends to play with you!</string>
    <string name="wy_label_search_friends">Search friends in WiYun</string>
    <string name="wy_label_title_with_colon">Title:</string>
    <string name="wy_label_category_with_colon">Cat:</string>
    <string name="wy_placeholder_enter_title">enter title of your topic</string>
    <string name="wy_placeholder_enter_username">enter WiYun username</string>
</resources>