<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/whackamole_menu_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip">
        <Button android:id="@id/btn_start" android:text="@string/start_game" style="@style/btn_wood" />
        <Button android:id="@id/btn_vs_mode" android:text="@string/vs_mode" style="@style/btn_wood" />
        <Button android:id="@id/btn_highscores" android:text="@string/highscores" style="@style/btn_wood" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@id/btn_about" android:text="@string/about" style="@style/btn_wood" />
        <Button android:id="@id/btn_moreGames" android:text="@string/more_apps" style="@style/btn_wood" />
        <Button android:id="@id/btn_exit" android:text="@string/exit_game" style="@style/btn_wood" />
    </LinearLayout>
</LinearLayout>