<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/wy_cell_bg_style1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/wy_tertiary_text_dark" android:paddingLeft="10.0dip" android:paddingTop="18.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_label_invite_friends" style="@android:style/TextAppearance.Small" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/wy_button" android:background="@drawable/wy_button_style1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/wy_button_invite_gmail_contacts" style="@android:style/TextAppearance.Medium" />
    <TextView android:textColor="@color/wy_tertiary_text_dark" android:paddingLeft="10.0dip" android:paddingTop="18.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_label_search_friends" style="@android:style/TextAppearance.Small" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/wy_button2" android:background="@drawable/wy_button_style1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_marginBottom="10.0dip" android:text="@string/wy_button_search" style="@android:style/TextAppearance.Medium" />
</LinearLayout>