<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/wy_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" />
    <EditText android:id="@id/wy_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:inputType="numberDecimal" />
    <LinearLayout android:background="#ffffffff" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/wy_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_button_ok" android:layout_weight="1.0" />
        <Button android:id="@id/wy_button2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_button_clear" android:layout_weight="1.0" />
        <Button android:id="@id/wy_button3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_button_cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>