<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/wy_title_bg_style1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/wy_tertiary_text_dark" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_label_unbind_account" android:singleLine="true" android:drawableLeft="@drawable/wy_icon_general_settings" android:drawablePadding="10.0dip" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <View android:background="@drawable/wy_separator_style2" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/wy_gradient_bg_style1" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:textColor="@color/wy_warning_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_label_about_unbind_account" android:drawableLeft="@drawable/wy_icon_warning" android:drawablePadding="5.0dip" style="@android:style/TextAppearance.Small.Inverse" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:id="@id/wy_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@android:style/TextAppearance.Small.Inverse" />
            <Button android:id="@id/wy_button" android:background="@drawable/wy_button_style1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:minWidth="150.0dip" android:text="@string/wy_button_continue" style="@android:style/TextAppearance.Medium" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>