<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@color/wy_roundrect_container_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/wy_title_bg_style1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/wy_tertiary_text_dark" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wy_label_switch_account" android:singleLine="true" android:drawableLeft="@drawable/wy_icon_general_settings" android:drawablePadding="10.0dip" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <View android:background="@drawable/wy_separator_style2" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <FrameLayout android:background="@drawable/wy_gradient_bg_style1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/wy_panel" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:scrollbarThumbVertical="@drawable/wy_scrollbar_vertical_thumb_style1" android:id="@android:id/list" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:cacheColorHint="@android:color/transparent" android:divider="@drawable/wy_separator_style2" android:dividerHeight="2.0dip" android:layout_weight="1.0" />
            <Button android:id="@id/wy_button" android:background="@drawable/wy_button_style4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="14.0dip" android:layout_marginBottom="7.0dip" android:text="@string/wy_button_switch_account" style="@android:style/TextAppearance.Medium" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/wy_panel2" android:paddingLeft="20.0dip" android:paddingTop="30.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/wy_text" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@android:style/TextAppearance.Small.Inverse" />
            <Button android:id="@id/wy_button2" android:background="@drawable/wy_button_style1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:minWidth="150.0dip" android:text="@string/wy_button_continue" style="@android:style/TextAppearance.Medium" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>